tabela cadastro linkada com banco de dados

--- a/SaborBrasil/View/UsuarioControllers/Cadastro.cshtml
+++ b/SaborBrasil/View/UsuarioControllers/Cadastro.cshtml
@@ -1,4 +1,4 @@
-@model Usuario
+@model SaborBrasil.Models.Usuario
 
 <form asp-controller="Usuario" asp-action="Cadastrar" method="post">
     <div class="form-group">
